force-app/main/default/objects/HA_Payment_Schedule__c/HA_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Payment Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>