force-app/main/default/objects/HA_Payment_Schedule__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SD</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>30N</fullName>
            </value>
            <value>
                <fullName>10N</fullName>
            </value>
            <value>
                <fullName>27N</fullName>
            </value>
            <value>
                <fullName>10D</fullName>
            </value>
            <value>
                <fullName>WK</fullName>
            </value>
            <value>
                <fullName>RDA</fullName>
            </value>
            <value>
                <fullName>EMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>