force-app/main/default/objects/HA_Payment_Schedule__c/fields/End_Date_2__c.field-meta.xml
<CustomField>
    <fullName>End_Date_2__c</fullName>
    <formula>Start_Date_2__c  +  (VALUE(Text(Schedule__c)) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date -2</label>
    <type>Date</type>
</CustomField>