force-app/main/default/objects/HA_Payment_Schedule__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Every Other Night</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>