force-app/main/default/objects/HA_Payment_Schedule__c/fields/Is_Bulk_Upload_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk_Upload_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bulk Upload Allowed</label>
    <type>Checkbox</type>
</CustomField>