force-app/main/default/objects/HA_Payment_Schedule__c/fields/Is_External__c.field-meta.xml
<CustomField>
    <fullName>Is_External__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Available for website</inlineHelpText>
    <label>Is External</label>
    <type>Checkbox</type>
</CustomField>