force-app/main/default/objects/HA_Payment_Schedule__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>