force-app/main/default/objects/HA_Payment_Schedule__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <label>Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque / Postal Order</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Card Terminal</fullName>
            </value>
            <value>
                <fullName>Crowdfunding and Agencies</fullName>
            </value>
            <value>
                <fullName>In Kind</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>