force-app/main/default/objects/HA_Payment_Schedule__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <label>Processing Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>