force-app/main/default/objects/HA_Payment_Schedule__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>