force-app/main/default/objects/HA_Payment_Schedule__c/fields/Start_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_3__c</fullName>
    <label>Start Date -3</label>
    <type>Date</type>
</CustomField>