force-app/main/default/objects/HA_Payment_Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date -1</label>
    <type>Date</type>
</CustomField>