force-app/main/default/objects/HA_Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Frequency__c</columns>
    <columns>Processing_Time__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>